refactor: BuildSummary