@@ -1,11 +1,11 @@
 package dev.huskuraft.effortless.building.operation.block;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
-import dev.huskuraft.effortless.api.core.ItemStack;
+import dev.huskuraft.effortless.api.core.BlockState;
+import dev.huskuraft.effortless.building.operation.BlockSummary;
 import dev.huskuraft.effortless.building.operation.Operation;
-import dev.huskuraft.effortless.building.operation.OperationSummaryType;
 import dev.huskuraft.effortless.building.operation.empty.EmptyOperation;
 
 public class BlockBreakOperationResult extends BlockOperationResult {
@@ -13,10 +13,10 @@ public class BlockBreakOperationResult extends BlockOperationResult {
     public BlockBreakOperationResult(
             BlockBreakOperation operation,
             Type result,
-            List<ItemStack> inputs,
-            List<ItemStack> outputs
+            BlockState oldBlockState,
+            BlockState newBlockState
     ) {
-        super(operation, result, inputs, outputs);
+        super(operation, result, oldBlockState, newBlockState);
     }
 
     @Override
@@ -37,30 +37,26 @@ public class BlockBreakOperationResult extends BlockOperationResult {
     }
 
     @Override
-    public List<ItemStack> getSummary(OperationSummaryType type) {
-        return switch (type) {
-            case BLOCKS_DESTROYED -> switch (result) {
-                case SUCCESS, SUCCESS_PARTIAL, CONSUME -> outputs;
-                default -> List.of();
-            };
-            case BLOCKS_NOT_BREAKABLE -> switch (result) {
-                case FAIL_PLAYER_CANNOT_INTERACT, FAIL_PLAYER_CANNOT_BREAK, FAIL_WORLD_BORDER, FAIL_WORLD_HEIGHT -> outputs;
-                default -> List.of();
-            };
-            case BLOCKS_TOOLS_INSUFFICIENT -> switch (result) {
-                case FAIL_ITEM_INSUFFICIENT, FAIL_TOOL_INSUFFICIENT -> outputs;
-                default -> Collections.emptyList();
-            };
-            case BLOCKS_BLACKLISTED -> switch (result) {
-                case FAIL_CONFIG_BLACKLISTED -> outputs;
-                default -> List.of();
-            };
-            case BLOCKS_NO_PERMISSION -> switch (result) {
-                case FAIL_CONFIG_BREAK_PERMISSION -> outputs;
-                default -> List.of();
-            };
-            default -> List.of();
+    public Map<BlockSummary, List<BlockState>> getBlockSummary() {
+        if (getOldBlockState() != null) {
+            return Map.of(getSummaryType(), List.of(getOldBlockState()));
+        }
+        return Map.of();
+    }
+
+    public BlockSummary getSummaryType() {
+        return switch (result) {
+            case SUCCESS, SUCCESS_PARTIAL, CONSUME -> BlockSummary.BLOCKS_DESTROYED;
+            case FAIL_PLAYER_CANNOT_INTERACT, FAIL_PLAYER_CANNOT_BREAK, FAIL_WORLD_BORDER, FAIL_WORLD_HEIGHT ->
+                    BlockSummary.BLOCKS_NOT_BREAKABLE;
+            case FAIL_ITEM_INSUFFICIENT -> BlockSummary.BLOCKS_ITEMS_INSUFFICIENT;
+            case FAIL_TOOL_INSUFFICIENT -> BlockSummary.BLOCKS_TOOLS_INSUFFICIENT;
+            case FAIL_CONFIG_BREAK_BLACKLISTED -> BlockSummary.BLOCKS_BLACKLISTED;
+            case FAIL_CONFIG_PLACE_PERMISSION, FAIL_CONFIG_BREAK_PERMISSION, FAIL_CONFIG_INTERACT_PERMISSION ->
+                    BlockSummary.BLOCKS_NO_PERMISSION;
+            default -> BlockSummary.HIDDEN;
         };
     }
+
 
 }
